--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,71 @@
-/* Write your CSS here! */
+body {
+    display: block;
+    margin: 8px;
+    padding-left: 25px;
+    padding-right: 25px;
+    background-color: rgba(131, 221, 221, 0.564);
+
+}
+main {
+    background-color: aliceblue;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 100px;
+    margin-right: 100px;
+    padding-top: 10px;
+    padding-right: 50px;
+    padding-bottom: 10px;
+    padding-left: 50px;
+    width: 1150px
+    
+}
+p {
+    font-size: 17px;
+}
+
+img {
+    height: 100 px;
+    width: 100%;
+}
+
+.funParagraph{
+    border-bottom-style: dotted;
+    border-width: thick;
+    padding-bottom: 15px;
+    color: green;
+}
+#mainHeading {
+    text-align: center;
+    color: red;
+}
+#logoBanner {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%
+}
+#caption1 {
+    padding-top: 1px;
+    margin-top: 1px;
+    font-size: 15px;
+}
+#caption2 {
+    padding-top: 1px;
+    margin-top: 1px; 
+    font-size: 15px;
+}
+#caption3 {
+    padding-top: 1px;
+    margin-top: 1px;
+    font-size: 15px;
+}
+#caption4 {
+    padding-top: 1px;
+    margin-top: 1px;
+    font-size: 15px;
+}
+#caption5{
+    padding-top: 1px;
+    margin-top: 1px;
+    font-size: 15px;
+}
